<resources>
    <string name="app_name">Posse Up</string>
    <string name="upcoming_events">Your Upcoming Events</string>
    <string name="app_basic_info">
        Form groups and make new friends, whatever the event!
        You can join in on public events, or create your own private sessions for you and your friends
    </string>
    <string name="username_field">Username / Email</string>
    <string name="password_field">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_code">Code</string>
    <string name="cancel">Cancel</string>
    <string name="reset_begin">Confirm</string>
    <string name="reset_info">You will recieve an email shortly with a unique code. Please paste it into the code area above, and click confirm to continue</string>
    <string name="no_account">Don\'t have an account yet? Sign up</string>
    <string name="sign_up">Sign Up</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>

    <string name="full_name">Full Name</string>
    <string name="already_account">Already have an account? Sign in</string>
    <string name="username">Username</string>

    <string name="hi">Hi </string>

    <string name="menu_profile">My profile</string>
    <string name="menu_sign_out">Sign out</string>
</resources>
