<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:background="@drawable/gradient_background">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi"
            android:id="@+id/configure_welcome"
            android:textColor="@color/white"
            android:layout_marginTop="38dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/linearLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/welcome_name"
            android:textColor="@color/white"
            android:layout_marginTop="38dp"
            android:layout_alignBottom="@+id/configure_welcome"
            android:layout_centerHorizontal="true" />
    </LinearLayout>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/full_name"
        android:ems="10"
        android:id="@+id/fullname"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:minWidth="200dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textSize="12dp"
        android:id="@+id/email_signup"
        android:layout_below="@+id/fullname"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:minWidth="200dp"
        android:layout_alignStart="@+id/fullname"
        android:hint="Email"
        android:layout_marginTop="27dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/password_signup"
        android:layout_marginTop="27dp"
        android:hint="@string/password_field"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:minWidth="200dp"
        android:layout_below="@+id/email_signup"
        android:layout_alignStart="@+id/email_signup" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/signup_button"
        android:textSize="12dp"
        android:background="#FF3366"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:textColor="#FFF8F8"
        android:typeface="normal"
        android:textAllCaps="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/already_account"
            android:id="@+id/signin_text"
            android:textColor="#FFF8F8"
            android:textSize="10dp"
            android:layout_marginBottom="6dp" />
    </LinearLayout>




</RelativeLayout>